--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="flex justify-between items-center">
                 <!-- Logo aligned left -->
                 <div class="py-2">
-                    <img src="/assets/neuroconnectlogo.jpeg" alt="NeuroConnect Logo" class="h-16">
+                    <img src="assets/neuroconnectlogo.jpeg" alt="NeuroConnect Logo" class="h-16">
                 </div>
                 
                 <!-- Navigation -->
